<resources>
    <string name="app_name">Health Care RS Hermina Samarinda</string>
    <string name="SloginGreeting">Selamat Datang</string>
    <string name="SloginHintuser">Nomor Rekam Medis</string>
    <string name="SloginHintpass">Tanggal Lahir</string>
    <string name="SloginMasuk">Masuk</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="recaptcha_site_key">6LdVUlEcAAAAAGhTf-k8vG1ICiA2La827RAloKN8</string>
</resources>