<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@drawable/backgroundlogin"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/namaappdilogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="30sp"
            android:padding="10dp"
            android:background="@drawable/customedittext"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="80dp"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iluslogin"
            android:layout_width="140dp"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:scaleType="fitXY"
            android:src="@drawable/logoherlogin"
            app:layout_constraintTop_toBottomOf="@id/namaappdilogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"/>

        <TextView
            android:id="@+id/selamatdatanglogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SloginGreeting"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/iluslogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="30dp"/>

        <LinearLayout
            android:id="@+id/parentinputlogin"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/selamatdatanglogin">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/ETnomorcm"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/customedittext"
                android:padding="10dp"
                android:textAlignment="center"
                android:paddingStart="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:hint="@string/SloginHintuser"
                android:layout_margin="10dp"
                app:layout_constraintBottom_toTopOf="@id/ETtgllahir"
                android:inputType="text"
                android:paddingLeft="20dp"
                android:gravity="center_horizontal"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/ETtgllahir"
                android:background="@drawable/customedittext"
                android:layout_width="match_parent"
                android:padding="10dp"
                android:focusable="false"
                android:paddingLeft="20dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:layout_gravity="center_horizontal"
                android:hint="@string/SloginHintpass"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:inputType="date"
                android:paddingStart="20dp" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/BTlogin"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/SloginMasuk"
            android:textColor="@color/black"
            android:layout_marginBottom="10dp"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:background="@drawable/custombutton"
            app:layout_constraintTop_toBottomOf="@id/parentinputlogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>